namespace TodoApp.Enumeradores
{
    public enum TodoStatus
    {
        Pendente = 0,
        EmAndamento = 1,
        Concluido = 2
    }
}
