namespace TodoApp.Enumeradores
{
    public enum UsuarioStatus
    {
        Ativo = 1,
        Inativo = 0
    }
}
